# sitar

./: .gitignore  Atom.hpp  CMakeLists.txt  Constants.hpp  README.md  Saha.cpp  Saha.hpp  Solve.hpp  Utils.hpp
.github/workflows/: cmake-multi-platform.yml  formatting.yml  regression.yml  ruff.yml
src/: Atom.hpp  CMakeLists.txt  CheckState.cpp  CheckState.hpp  Constants.hpp  Error.hpp  Saha.cpp  Saha.hpp  Solve.hpp  SolverOpts.hpp  atom.cpp  atom.hpp  check_state.cpp  check_state.hpp  constants.hpp  error.hpp  main.cpp  saha.cpp  saha.hpp  solve.hpp  solver_opts.hpp  timer.hpp  utils.hpp
tools/: matplotlibrc  plot_ca.py
tst/regression/: regression_test.py
tst/unit/: CMakeLists.txt  test_catch_integration.cpp  test_utils.hpp  unit_tests_main.cpp
tst/unit/fixed_point/: CMakeLists.txt  funcs.hpp  test_fp.cpp
